# evotrack-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  ENDPOINT_EXAMPLES.md  FLUTTER_IMPLEMENTATION_PROMPT.md  FLUTTER_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  fix_database.sh  fix_port_conflict.sh  init.sql  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements-dev.txt  requirements.txt  response.json  ruff.toml  setup_cicd.sh  test_auth.sh  test_auth_with_orgs.sh  validate_setup.sh  wait-for-postgres.sh
.claude/agents/: test-runner.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_create_users.py  002_create_organizations.py  003_create_invitations.py  004_add_tax_id_to_organizations.py  005_add_slug_to_organizations.py  006_extend_user_model.py  007_create_departments.py  008_add_user_stored_procedures.py  009_fn_user_auth_response.py  010_update_fn_organization_users_filters.py  011_fix_enum_comparison.py  012_fix_status_case_sensitivity.py  013_fix_member_role_stats.py  2026_01_28_1748-5f2bbe251005_add_user_status_and_activation_fields.py
app/: __init__.py  api.py  main.py
app/core/: __init__.py  config.py  constants.py  database.py  dependencies.py  email.py  logging.py  security.py
app/modules/: __init__.py
app/shared/: __init__.py  base_repository.py  exceptions.py  pagination.py  responses.py  utils.py
docs/: BADGES.md  CI_CD.md  PERMISSIONS.md  frontend_org_departments.md  users_api_specification.md
scripts/: diagnose_db.sh  fix_db.sh  init_db.sh  init_postgres.sh  verify_membership.py  verify_org_users.py
tests/: conftest.py  test_core.py  test_main.py
tests/auth/: test_router.py
(+48 files in other folders)
